@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,14 +16,13 @@
 
 package org.springframework.boot.build.toolchain;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.plugins.JavaPluginExtension;
-import org.gradle.api.tasks.compile.JavaCompile;
-import org.gradle.api.tasks.javadoc.Javadoc;
 import org.gradle.api.tasks.testing.Test;
 import org.gradle.jvm.toolchain.JavaLanguageVersion;
 import org.gradle.jvm.toolchain.JavaToolchainSpec;
@@ -53,29 +52,28 @@ public class ToolchainPlugin implements Plugin<Project> {
 			disableToolchainTasks(project);
 		}
 		else {
-			JavaToolchainSpec toolchainSpec = project.getExtensions().getByType(JavaPluginExtension.class)
-					.getToolchain();
+			JavaToolchainSpec toolchainSpec = project.getExtensions()
+				.getByType(JavaPluginExtension.class)
+				.getToolchain();
 			toolchainSpec.getLanguageVersion().set(toolchain.getJavaVersion());
-			configureTestToolchain(project);
+			configureTestToolchain(project, toolchain);
 		}
 	}
 
 	private boolean isJavaVersionSupported(ToolchainExtension toolchain, JavaLanguageVersion toolchainVersion) {
-		return toolchain.getMaximumCompatibleJavaVersion().map((version) -> version.canCompileOrRun(toolchainVersion))
-				.getOrElse(true);
+		return toolchain.getMaximumCompatibleJavaVersion()
+			.map((version) -> version.canCompileOrRun(toolchainVersion))
+			.getOrElse(true);
 	}
 
 	private void disableToolchainTasks(Project project) {
-		project.getTasks().withType(JavaCompile.class, (task) -> task.setEnabled(false));
-		project.getTasks().withType(Javadoc.class, (task) -> task.setEnabled(false));
 		project.getTasks().withType(Test.class, (task) -> task.setEnabled(false));
 	}
 
-	private void configureTestToolchain(Project project) {
-		project.getTasks().withType(Test.class, (test) -> {
-			List<String> arguments = Collections.singletonList("--illegal-access=warn");
-			test.jvmArgs(arguments);
-		});
+	private void configureTestToolchain(Project project, ToolchainExtension toolchain) {
+		List<String> jvmArgs = new ArrayList<>();
+		jvmArgs.addAll(toolchain.getTestJvmArgs().getOrElse(Collections.emptyList()));
+		project.getTasks().withType(Test.class, (test) -> test.jvmArgs(jvmArgs));
 	}
 
 }
